k8s/auth-root-switch/keycloak-root-to-petra-account.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: petra-iam
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-set-headers: petra-iam/keycloak-proxy-headers
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      location = / {
        return 302 /realms/petra/account/;
      }
spec:
  ingressClassName: public
  rules:
    - host: auth-ldap.ppsi.petra.ac.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
  tls:
    - hosts:
        - auth-ldap.ppsi.petra.ac.id
      secretName: auth-ldap-tls
